// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fallbacks for cohort object present, unloaded 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Fallbacks for scenario missing 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                2
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                4
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                1
              </strong>
               
              role
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  Super User  super  super  super@email.com  participant super_admin  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Facilitator User  facilitator  facilitator  facilitator@email.com  participant facilitator researcher owner  \\"
            >
              <span
                aria-label=\\"Facilitator User (facilitator)\\"
                class=\\"ui medium text\\"
                title=\\"Facilitator User (facilitator)\\"
              >
                Facilitator User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chalkboard teacher\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Facilitator\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Researcher User  researcher  researcher  researcher@email.com  participant researcher  \\"
            >
              <span
                aria-label=\\"Researcher User (researcher)\\"
                class=\\"ui medium text\\"
                title=\\"Researcher User (researcher)\\"
              >
                Researcher User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon user graduate\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Researcher\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Participant User  participant  participant  participant@email.com  participant  \\"
            >
              <span
                aria-label=\\"Participant User (participant)\\"
                class=\\"ui medium text\\"
                title=\\"Participant User (participant)\\"
              >
                Participant User
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  anonymous  anonymous  participant  \\"
            >
              <span
                aria-label=\\"anonymous\\"
                class=\\"ui medium text\\"
                title=\\"anonymous\\"
              >
                anonymous
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Teacher
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific teacher, participating in a multi person scenario.
                          </span>
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Student
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific student, participating in a multi person scenario.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui medium text\\"
              >
                1
                 
                participant
                 , 
                2 roles unassigned.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Fallbacks for scenario object present, unloaded 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                2
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                4
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                1
              </strong>
               
              role
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  Super User  super  super  super@email.com  participant super_admin  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Facilitator User  facilitator  facilitator  facilitator@email.com  participant facilitator researcher owner  \\"
            >
              <span
                aria-label=\\"Facilitator User (facilitator)\\"
                class=\\"ui medium text\\"
                title=\\"Facilitator User (facilitator)\\"
              >
                Facilitator User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chalkboard teacher\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Facilitator\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Researcher User  researcher  researcher  researcher@email.com  participant researcher  \\"
            >
              <span
                aria-label=\\"Researcher User (researcher)\\"
                class=\\"ui medium text\\"
                title=\\"Researcher User (researcher)\\"
              >
                Researcher User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon user graduate\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Researcher\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Participant User  participant  participant  participant@email.com  participant  \\"
            >
              <span
                aria-label=\\"Participant User (participant)\\"
                class=\\"ui medium text\\"
                title=\\"Participant User (participant)\\"
              >
                Participant User
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  anonymous  anonymous  participant  \\"
            >
              <span
                aria-label=\\"anonymous\\"
                class=\\"ui medium text\\"
                title=\\"anonymous\\"
              >
                anonymous
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Teacher
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific teacher, participating in a multi person scenario.
                          </span>
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Student
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific student, participating in a multi person scenario.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui medium text\\"
              >
                1
                 
                participant
                 , 
                2 roles unassigned.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Fallbacks for state.chat, state.scenario, state.cohort (missing) 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                0
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                4
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                -1
              </strong>
               
              roles
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  Super User  super  super  super@email.com  participant super_admin  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Facilitator User  facilitator  facilitator  facilitator@email.com  participant facilitator researcher owner  \\"
            >
              <span
                aria-label=\\"Facilitator User (facilitator)\\"
                class=\\"ui medium text\\"
                title=\\"Facilitator User (facilitator)\\"
              >
                Facilitator User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chalkboard teacher\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Facilitator\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Researcher User  researcher  researcher  researcher@email.com  participant researcher  \\"
            >
              <span
                aria-label=\\"Researcher User (researcher)\\"
                class=\\"ui medium text\\"
                title=\\"Researcher User (researcher)\\"
              >
                Researcher User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon user graduate\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Researcher\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Participant User  participant  participant  participant@email.com  participant  \\"
            >
              <span
                aria-label=\\"Participant User (participant)\\"
                class=\\"ui medium text\\"
                title=\\"Participant User (participant)\\"
              >
                Participant User
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  anonymous  anonymous  participant  \\"
            >
              <span
                aria-label=\\"anonymous\\"
                class=\\"ui medium text\\"
                title=\\"anonymous\\"
              >
                anonymous
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui error medium text\\"
              >
                1
                 
                participant
                 , 
                remove 1 to continue.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Fallbacks for state.chat, state.scenario, state.cohort (unavailable) 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Fallbacks for state.chat, state.scenario, state.cohort (unloaded) 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                0
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                4
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                -1
              </strong>
               
              roles
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  Super User  super  super  super@email.com  participant super_admin  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Facilitator User  facilitator  facilitator  facilitator@email.com  participant facilitator researcher owner  \\"
            >
              <span
                aria-label=\\"Facilitator User (facilitator)\\"
                class=\\"ui medium text\\"
                title=\\"Facilitator User (facilitator)\\"
              >
                Facilitator User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chalkboard teacher\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Facilitator\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Researcher User  researcher  researcher  researcher@email.com  participant researcher  \\"
            >
              <span
                aria-label=\\"Researcher User (researcher)\\"
                class=\\"ui medium text\\"
                title=\\"Researcher User (researcher)\\"
              >
                Researcher User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon user graduate\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Researcher\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Participant User  participant  participant  participant@email.com  participant  \\"
            >
              <span
                aria-label=\\"Participant User (participant)\\"
                class=\\"ui medium text\\"
                title=\\"Participant User (participant)\\"
              >
                Participant User
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  anonymous  anonymous  participant  \\"
            >
              <span
                aria-label=\\"anonymous\\"
                class=\\"ui medium text\\"
                title=\\"anonymous\\"
              >
                anonymous
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui error medium text\\"
              >
                1
                 
                participant
                 , 
                remove 1 to continue.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Refresh chat users 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                2
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                4
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                1
              </strong>
               
              role
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  Super User  super  super  super@email.com  participant super_admin  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Facilitator User  facilitator  facilitator  facilitator@email.com  participant facilitator researcher owner  \\"
            >
              <span
                aria-label=\\"Facilitator User (facilitator)\\"
                class=\\"ui medium text\\"
                title=\\"Facilitator User (facilitator)\\"
              >
                Facilitator User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chalkboard teacher\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Facilitator\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Researcher User  researcher  researcher  researcher@email.com  participant researcher  \\"
            >
              <span
                aria-label=\\"Researcher User (researcher)\\"
                class=\\"ui medium text\\"
                title=\\"Researcher User (researcher)\\"
              >
                Researcher User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon user graduate\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Researcher\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  Participant User  participant  participant  participant@email.com  participant  \\"
            >
              <span
                aria-label=\\"Participant User (participant)\\"
                class=\\"ui medium text\\"
                title=\\"Participant User (participant)\\"
              >
                Participant User
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
            <div
              class=\\"result\\"
              searchable=\\"  anonymous  anonymous  participant  \\"
            >
              <span
                aria-label=\\"anonymous\\"
                class=\\"ui medium text\\"
                title=\\"anonymous\\"
              >
                anonymous
              </span>
               
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Teacher
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific teacher, participating in a multi person scenario.
                          </span>
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Student
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific student, participating in a multi person scenario.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui medium text\\"
              >
                1
                 
                participant
                 , 
                2 roles unassigned.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Render 1 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                2
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                0
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                1
              </strong>
               
              role
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  undefined  super  super  super@email.com  super facilitator  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Teacher
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific teacher, participating in a multi person scenario.
                          </span>
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Student
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific student, participating in a multi person scenario.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui medium text\\"
              >
                1
                 
                participant
                 , 
                2 roles unassigned.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`Render 2 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__invite not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui message\\"
            data-testid=\\"lobby-user-select-instructions\\"
          >
            <i
              aria-hidden=\\"true\\"
              class=\\"close icon\\"
            />
            <p>
              This scenario has 
              <strong>
                2
              </strong>
               roles. As host, you will participate in the scenario by filling one of the available roles.
            </p>
            <ol>
              <li>
                Choose your role first.
              </li>
              <li>
                Search and select participants that you want to invite, and assign their roles as you go.
              </li>
              <li>
                Once all of the available roles are filled, click the
                 
                <button
                  class=\\"ui mini compact disabled button primary\\"
                  disabled=\\"\\"
                  tabindex=\\"-1\\"
                >
                  Send invites
                </button>
                 button to invite your selected participants.
              </li>
            </ol>
            <p>
              There are 
              <strong>
                0
              </strong>
               other 
              participants
               
              available to fill the other 
              <strong>
                1
              </strong>
               
              role
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"ui fluid search grid__menu-search l__search-input primary\\"
        >
          <div
            class=\\"ui icon input\\"
          >
            <input
              autocomplete=\\"off\\"
              class=\\"prompt\\"
              tabindex=\\"0\\"
              type=\\"text\\"
              value=\\" \\"
            />
            <i
              aria-hidden=\\"true\\"
              class=\\"search icon\\"
            />
          </div>
          <div
            class=\\"results transition\\"
          >
            <div
              class=\\"result\\"
              searchable=\\"  undefined  super  super  super@email.com  super facilitator  \\"
            >
              <span
                aria-label=\\"Super User (super)\\"
                class=\\"ui medium text\\"
                title=\\"Super User (super)\\"
              >
                Super User
              </span>
               
              <i
                aria-hidden=\\"true\\"
                class=\\"small icon chess queen\\"
                style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                title=\\"Super\\"
              />
              <span
                class=\\"l__hidden\\"
              >
                (Select to invite)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-select-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"right floated content\\"
                  >
                    <div
                      aria-expanded=\\"false\\"
                      class=\\"ui selection dropdown\\"
                      id=\\"999\\"
                      name=\\"0\\"
                      role=\\"listbox\\"
                      tabindex=\\"0\\"
                    >
                      <div
                        aria-atomic=\\"true\\"
                        aria-live=\\"polite\\"
                        class=\\"divider default text\\"
                        role=\\"alert\\"
                      >
                        Choose your role
                      </div>
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"dropdown icon\\"
                      />
                      <div
                        class=\\"menu transition\\"
                      >
                        <div
                          aria-checked=\\"true\\"
                          aria-selected=\\"true\\"
                          class=\\"active selected item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"text\\"
                          />
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Teacher
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific teacher, participating in a multi person scenario.
                          </span>
                        </div>
                        <div
                          aria-checked=\\"false\\"
                          aria-selected=\\"false\\"
                          class=\\"item\\"
                          role=\\"option\\"
                          style=\\"pointer-events: all;\\"
                        >
                          <span
                            class=\\"ui medium text\\"
                          >
                            Student
                          </span>
                          <br />
                          <span
                            class=\\"ui small text\\"
                          >
                            A non-specific student, participating in a multi person scenario.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=\\"content\\"
                  >
                    <span>
                      <span
                        aria-label=\\"Super User (super)\\"
                        class=\\"ui medium text\\"
                        title=\\"Super User (super)\\"
                      >
                        Super User
                      </span>
                       
                      <i
                        aria-hidden=\\"true\\"
                        class=\\"small icon chess queen\\"
                        style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                        title=\\"Super\\"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=\\"extra content\\"
            >
              <span
                class=\\"ui medium text\\"
              >
                1
                 
                participant
                 , 
                2 roles unassigned.
              </span>
              <button
                class=\\"ui disabled right floated button primary\\"
                disabled=\\"\\"
                tabindex=\\"-1\\"
              >
                Set roles & send invites
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid=\\"lobby-main\\"
    />
  </div>
</body>"
`;

exports[`props.asCard 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui centered card scenario__slide-card\\"
    >
      <div
        aria-busy=\\"true\\"
        aria-live=\\"polite\\"
        class=\\"ui card loading__single-card\\"
        role=\\"status\\"
        style=\\"width: 100%; height: 90%;\\"
      >
        <div
          aria-hidden=\\"true\\"
          class=\\"content loading__content\\"
        >
          <div
            class=\\"ui placeholder\\"
          >
            <div
              class=\\"square image\\"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>"
`;
